# MerryClustering

./: README.md  README.md~  how to initialize a local branch.md  kinectSetup.sh
block_sorter/: CMakeLists.txt  CMakeLists.txt~  package.xml
block_sorter/include/: block_sorter.h~
block_sorter/include/block_sorter/: block_sorter.h
block_sorter/src/: block_sorter.cpp  block_sorter_main.cpp
meeting log/: 1st meeting log.md  1st meeting log.md~
merry_calibration/: CMakeLists.txt  package.xml
merry_coordinator/: CMakeLists.txt  CMakeLists.txt~  example procedures.md~  package.xml~
merry_coordinator/launch/: merry_coordinator.launch  merry_coordinator.launch~
merry_coordinator/src/: merry_coordinator.cpp
merry_gripper/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme.md  readme.md~
merry_gripper/include/merry_gripper/: merry_gripper.h
merry_gripper/src/: baxter_gripper_test.cpp  merry_gripper.cpp  merry_gripper_main.cpp
merry_hmi/: CMakeLists.txt  CMakeLists.txt~  package.xml
merry_hmi/include/merry_hmi/: merry_hmi.h
merry_hmi/src/: merry_hmi.cpp  merry_hmi_main.cpp
merry_motion/: CMakeLists.txt  package.xml
merry_motionplanner/: CMakeLists.txt  CMakeLists.txt~  example procedures.md~  package.xml  package.xml~  readme.md  readme.md~
merry_motionplanner/include/merry_motionplanner/: merry_motionplanner.h
merry_motionplanner/launch/: merry_motionplanner.launch
merry_motionplanner/src/: merry_motionplanner.cpp  merry_motionplanner_main.cpp  merry_motionplanner_test.cpp  merry_motionplanner_test1.cpp  merry_motionplanner_test2.cpp
merry_pcl/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme.md  readme.md~
merry_pcl/include/merry_pcl/: merry_pcl.h
merry_pcl/src/: block_sorter.cpp  merry_pcl.cpp  merry_pcl_alltest1.cpp  merry_pcl_alltest2.cpp  merry_pcl_color_test.cpp  merry_pcl_main.cpp  merry_pcl_test.cpp
merry_pcl_utils/: CMakeLists.txt  CMakeLists.txt~  example procedures.md  example procedures.md~  package.xml  package.xml~
merry_pcl_utils/include/merry_pcl_utils/: merry_pcl_utils.h
merry_pcl_utils/src/: block_sorter.cpp~  color.md  merry_pcl_utils.cpp  merry_pcl_utils_color_test.cpp  merry_pcl_utils_main.cpp  merry_pcl_utils_test.cpp  test_frameid.cpp
my_interesting_moves/: readme.md  readme.md~
my_interesting_moves/include/my_interesting_moves/: my_interesting_moves.h
my_interesting_moves/src/: my_interesting_moves.cpp  peng_action_client_pre_pose.cpp
pcl_block_sorter_kjw44/: CMakeLists.txt  package.xml
pcl_block_sorter_kjw44/include/: block_sorter.h
pcl_block_sorter_kjw44/src/: block_sorter.cpp  block_sorter_V2.cpp
